# pgmq-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: CODEOWNERS  pgmq_python.yml
benches/: bench.py  locustfile.py  ops.py  stats.py
example/: example_app_async.py  example_app_sync.py
src/pgmq/: __init__.py  _sql.py  async_queue.py  base.py  decorators.py  logger.py  messages.py  notify_listener.py  py.typed  queue.py
src/pgmq_py/: __init__.py  async_queue.py  queue.py
tembo-pgmq-python/: pyproject.toml
tembo-pgmq-python/tembo_pgmq_python/: async_queue.py  queue.py
tembo-pgmq-python/tests/: test_integration.py
tests/: test_async_integration.py  test_integration.py
tests/backward_compatibility/v1/: test_async_integration.py  test_integration.py
tests/v2/: test_async_queue.py  test_features.py  test_logger.py  test_notify_listener.py  test_routing.py  test_sync_queue.py  utils.py
